# jarvis

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
config/: aliases.json  breach-monitor.json  breach-state.json  flash-goals.json  flash-habits.json  habits.json  history.json  homekit-shortcuts.json  morning-digest.json  network-devices.json  network-guardian.json  scheduled-tasks.json  startup.json  threat-monitor.json  threat-state.json
menubar/: JarvisMenubar.swift  start-menubar.sh
rust-sidecar/: Cargo.toml
rust-sidecar/src/: embeddings.rs  fuzzy.rs  main.rs  traces.rs  vector.rs
scripts/: clap-daemon.py
src/: index.ts  mac-client.ts
src/agent/: executor.ts  planner.ts  task-queue.ts
src/core/: capabilities.ts  context.ts  conversation-engine.ts  executor.ts  history.ts  memory.ts  parser.ts  plugin-loader.ts  registry.ts  types.ts  undo-stack.ts
src/intelligence/: context-engine.ts  energy-tracker.ts  index.ts  learning-engine.ts  memory-index.ts  router-policy.ts  trace-store.ts
src/modules/: ai-chat.ts  api-orchestrator.ts  app-launcher.ts  browser-control.ts  calendar.ts  clipboard.ts  coding-agent.ts  comms-stack.ts  computer-control.ts  conversions.ts  data-connectors.ts  deep-research.ts  desktop-control.ts  dev-agent.ts  dossier.ts  email.ts  energy-monitor.ts  file-intelligence.ts  file-operations.ts  flight-finder.ts  media-control.ts  morning-digest.ts  multi-agent.ts  personality.ts  process-manager.ts  research.ts  sandbox-runner.ts  (+19 more)
tests/: config.test.ts  logger.test.ts  parser.test.ts  undo-stack.test.ts
(+43 files in other folders)
