[package]
name = "jarvis-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
ordered-float = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
